dnl Process this file with autoconf to produce a configure script.
dnl Copyright (C) 2019  Eudaemonia Inc

dnl This program is free software: you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.

dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.

dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT([org-babel-tangle], [0.0.0])
AC_CONFIG_SRCDIR([src/org-babel-tangle])
AM_INIT_AUTOMAKE

AC_OUTPUT(Makefile src/Makefile)
